--- a/css/style2.css
+++ b/css/style2.css
@@ -2,6 +2,8 @@
   display: grid;
   place-items: center;
   height: 500px;
+  min-height: 420px;
+  min-width: 240px;
 }
 
 .card {
@@ -12,7 +14,7 @@
 }
 
 .visual {
-  height: 125px;
+  height: 100px;
   width: 100%;
 }
 
